# Hermes-HUD_CN

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  install.sh  pyproject.toml
.github/: copilot-instructions.md
backend/: cache.py  file_watcher.py  main.py  websocket_manager.py
backend/api/: __init__.py  agents.py  cache.py  chat.py  corrections.py  cron.py  dashboard.py  health.py  memory.py  official_ui.py  patterns.py  profiles.py  projects.py  serialize.py  sessions.py  skills.py  snapshots.py  state.py  timeline.py  token_costs.py
backend/chat/: __init__.py  engine.py  fallback_tmux.py  models.py  streamer.py
backend/collectors/: __init__.py  agents.py  collect.py  config.py  corrections.py  cron.py  health.py  memory.py  models.py  patterns.py  profiles.py  projects.py  sessions.py  skills.py  snapshot.py  timeline.py  utils.py
backend/static/: index.html
backend/static/assets/: index-B39UBFjV.css  index-CRV06ExR.js
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AgentsPanel.tsx  BootScreen.tsx  ChatPanel.tsx  CommandPalette.tsx  CorrectionsPanel.tsx  CronPanel.tsx  DashboardPanel.tsx  HealthPanel.tsx  MemoryPanel.tsx  OfficialDashboardPanel.tsx  Panel.tsx  PatternsPanel.tsx  ProfilesPanel.tsx  ProjectsPanel.tsx  SessionsPanel.tsx  SkillsPanel.tsx  TokenCostsPanel.tsx  TopBar.tsx
frontend/src/components/chat/: Composer.tsx  (+5 more)
frontend/src/hooks/: useApi.ts  useChat.ts  useTheme.tsx  useWebSocket.ts
frontend/src/lib/: utils.ts
