[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-hudui"
version = "0.3.1"
description = "Web UI consciousness monitor for Hermes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Joey Rodriguez"},
]
keywords = ["ai", "agent", "dashboard", "webui", "hermes"]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pyyaml>=6.0",
    "watchfiles>=0.24.0",
]

[project.optional-dependencies]
tui = ["hermes-hud>=0.5.0"]
chat = ["hermes-agent>=0.1.0"]

[project.scripts]
hermes-hudui = "backend.main:cli"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.setuptools.package-data]
backend = ["static/**/*"]
